Issue fixed #19985 Send email confirmation popup close button area overlapping to content
Issue fixed #19985 Send email confirmation popup close button area overlapping to content

--- a/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/components/_modals_extend.less
@@ -146,13 +146,13 @@
     }
 
     .action-close {
-        padding: @modal-popup__padding;
+        padding: 1rem;
 
         &:active,
         &:focus {
             background: transparent;
-            padding-right: @modal-popup__padding + (@modal-action-close__font-size - @modal-action-close__active__font-size) / 2;
-            padding-top: @modal-popup__padding + (@modal-action-close__font-size - @modal-action-close__active__font-size) / 2;
+            padding-right: 1rem;
+            padding-top: 1rem;
         }
     }
 }
